--- a/DeepLearningAssignment2.ipynb
+++ b/DeepLearningAssignment2.ipynb
@@ -1684,7 +1684,7 @@
       "source": [
         "# Load and preprocess CIFAR-10 dataset\n",
         "(train_images, train_labels), (test_images, test_labels) = tf.keras.datasets.cifar10.load_data()\n",
-        "train_images, test_images = train_images / 255.0, test_images / 255.0  # Normalize images\n"
+        "train_images, test_images = train_images / 255.0, test_images / 255.0\n"
       ],
       "metadata": {
         "id": "khGmXyWoCqT4"
@@ -1695,7 +1695,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define AlexNet model builder function\n",
+        "# Define AlexNet model\n",
         "def build_alexnet_model(optimizer='adam', learning_rate=0.001):\n",
         "    # Set optimizer with learning rate\n",
         "    if optimizer == 'adam':\n",
@@ -1703,7 +1703,6 @@
         "    elif optimizer == 'sgd':\n",
         "        opt = optimizers.SGD(learning_rate=learning_rate)\n",
         "\n",
-        "    # Define simplified AlexNet model\n",
         "    model = models.Sequential([\n",
         "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)),\n",
         "        layers.MaxPooling2D((2, 2)),\n",
@@ -1717,7 +1716,7 @@
         "        layers.Dropout(0.5),\n",
         "        layers.Dense(128, activation='relu'),\n",
         "        layers.Dropout(0.5),\n",
-        "        layers.Dense(10)  # Output layer for CIFAR-10 classes\n",
+        "        layers.Dense(10)\n",
         "    ])\n",
         "\n",
         "    # Compile model\n",
@@ -1872,13 +1871,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define hyperparameter grid with a different name for optimizer list to avoid conflicts\n",
-        "opt_choices = ['adam', 'sgd']           # Test two optimizers\n",
-        "learning_rates = [0.001, 0.01]          # Test two learning rates\n",
-        "regularizations = [None]                # No regularization to keep it fast\n",
-        "residuals = [False]                     # Disable residuals for simplicity\n",
+        "# Define hyperparameter\n",
+        "opt_choices = ['adam', 'sgd']\n",
+        "learning_rates = [0.001, 0.01]\n",
+        "regularizations = [None]\n",
+        "residuals = [False]\n",
         "\n",
-        "# Set K-Fold and epochs to reduce execution time\n",
+        "# Set K-Fold and epochs\n",
         "k = 3\n",
         "epochs = 3\n",
         "kf = KFold(n_splits=k, shuffle=True, random_state=42)\n"
@@ -1892,10 +1891,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Store results for each configuration\n",
+        "# Store results\n",
         "results = {}\n",
         "\n",
-        "for optimizer in opt_choices:  # Using `opt_choices` instead of `optimizers`\n",
+        "for optimizer in opt_choices:\n",
         "    for lr in learning_rates:\n",
         "        for reg in regularizations:\n",
         "            for res in residuals:\n",
@@ -1908,18 +1907,18 @@
         "                    X_train, X_val = train_images[train_index], train_images[val_index]\n",
         "                    y_train, y_val = train_labels[train_index], train_labels[val_index]\n",
         "\n",
-        "                    # Build and train model with current configuration\n",
+        "\n",
         "                    model = build_alexnet_model(optimizer=optimizer, learning_rate=lr)  # Pass optimizer as a string\n",
         "                    history = model.fit(X_train, y_train, epochs=epochs, batch_size=64,\n",
         "                                        validation_data=(X_val, y_val), verbose=0)\n",
         "\n",
-        "                    # Collect validation and training accuracy for this fold\n",
+        "\n",
         "                    val_acc = history.history['val_accuracy'][-1]\n",
         "                    train_acc = history.history['accuracy'][-1]\n",
         "                    fold_val_accuracies.append(val_acc)\n",
         "                    fold_train_accuracies.append(train_acc)\n",
         "\n",
-        "                # Average accuracies over folds\n",
+        "\n",
         "                avg_val_acc = np.mean(fold_val_accuracies)\n",
         "                avg_train_acc = np.mean(fold_train_accuracies)\n",
         "                config_name = f\"opt={optimizer}_lr={lr}_reg={reg}_res={res}\"\n",
@@ -2022,14 +2021,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Rebuild the model with the best hyperparameters\n",
+        "# model with the best hyperparameters\n",
         "final_model = build_alexnet_model(optimizer=best_optimizer, learning_rate=best_lr)\n",
         "\n",
-        "# Train the model on the full training set\n",
+        "# Train the model\n",
         "history = final_model.fit(train_images, train_labels,\n",
-        "                          epochs=5,  # Reduced epochs for faster training\n",
+        "                          epochs=5,\n",
         "                          batch_size=64,\n",
-        "                          validation_split=0.05,  # Smaller validation split for quicker validation\n",
+        "                          validation_split=0.05,\n",
         "                          verbose=1)\n"
       ],
       "metadata": {
@@ -2092,14 +2091,13 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.preprocessing import label_binarize\n",
         "\n",
-        "# Get model predictions\n",
-        "y_pred_probs = final_model.predict(test_images)  # Predicted probabilities\n",
-        "y_pred = y_pred_probs.argmax(axis=1)  # Predicted classes\n",
-        "y_true = test_labels.flatten()  # True labels\n",
+        "y_pred_probs = final_model.predict(test_images)\n",
+        "y_pred = y_pred_probs.argmax(axis=1)\n",
+        "y_true = test_labels.flatten()\n",
         "\n",
         "# Binarize labels for ROC and AUC (one-hot encode)\n",
         "y_true_bin = label_binarize(y_true, classes=range(10))\n",
-        "y_pred_probs_bin = y_pred_probs  # Already in one-hot format from softmax output\n"
+        "y_pred_probs_bin = y_pred_probs\n"
       ],
       "metadata": {
         "colab": {
@@ -2211,7 +2209,7 @@
         "for i in range(10):\n",
         "    plt.plot(fpr[i], tpr[i], label=f\"Class {i} (AUC = {roc_auc[i]:.2f})\")\n",
         "\n",
-        "plt.plot([0, 1], [0, 1], 'k--')  # Diagonal line for reference\n",
+        "plt.plot([0, 1], [0, 1], 'k--')\n",
         "plt.xlabel(\"False Positive Rate\")\n",
         "plt.ylabel(\"True Positive Rate\")\n",
         "plt.title(\"ROC Curves for Each Class\")\n",
@@ -2260,7 +2258,7 @@
       },
       "outputs": [],
       "source": [
-        "# Define basic data augmentation\n",
+        "# data augmentation\n",
         "data_augmentation = tf.keras.Sequential([\n",
         "    layers.RandomFlip(\"horizontal\"),\n",
         "    layers.RandomRotation(0.1),\n",
@@ -2390,12 +2388,11 @@
         "    x = base_model(x)\n",
         "    x = layers.GlobalAveragePooling2D()(x)  # Global average pooling layer\n",
         "\n",
-        "    # Adding a dense layer for classification\n",
         "    x = layers.Dense(128, activation='relu')(x)\n",
-        "    x = layers.Dropout(0.5)(x)  # Dropout for regularization\n",
-        "    outputs = layers.Dense(10)(x)  # Output layer for 10 classes\n",
+        "    x = layers.Dropout(0.5)(x)\n",
+        "    outputs = layers.Dense(10)(x)\n",
         "\n",
-        "    # Create and compile model\n",
+        "\n",
         "    model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
         "    model.compile(optimizer='adam',\n",
         "                  loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
@@ -2404,7 +2401,7 @@
         "# Build the model\n",
         "mobilenet_model = build_baseline_mobilenet_model()\n",
         "\n",
-        "# Show the model summary\n",
+        "# model summary\n",
         "mobilenet_model.summary()\n"
       ]
     },
@@ -2451,7 +2448,7 @@
         }
       ],
       "source": [
-        "# Train the basic MobileNet model\n",
+        "# Train MobileNet model\n",
         "history_baseline = mobilenet_model.fit(train_images, train_labels, epochs=5, batch_size=64,\n",
         "                                        validation_split=0.1, verbose=1)\n"
       ]
@@ -2597,8 +2594,8 @@
       ],
       "source": [
         "# Get predictions\n",
-        "y_pred_proba = tf.nn.softmax(mobilenet_model.predict(test_images)).numpy()  # Get predicted probabilities\n",
-        "y_pred_classes = np.argmax(y_pred_proba, axis=1)  # Get predicted class labels\n",
+        "y_pred_proba = tf.nn.softmax(mobilenet_model.predict(test_images)).numpy()\n",
+        "y_pred_classes = np.argmax(y_pred_proba, axis=1)\n",
         "\n",
         "# Print classification report\n",
         "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer',\n",
@@ -2630,7 +2627,7 @@
         }
       ],
       "source": [
-        "# Compute confusion matrix\n",
+        "# confusion matrix\n",
         "cm = confusion_matrix(test_labels.flatten(), y_pred_classes)\n",
         "\n",
         "# Plot confusion matrix\n",
@@ -2641,15 +2638,6 @@
         "plt.title('Confusion Matrix - Basic MobileNet Model')\n",
         "plt.show()\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vJ-lNWFkUrs6"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2675,10 +2663,8 @@
         }
       ],
       "source": [
-        "# Binarize the test labels for multi-class ROC calculation\n",
         "test_labels_binarized = label_binarize(test_labels.flatten(), classes=range(10))\n",
         "\n",
-        "# Compute ROC curve and AUC for each class\n",
         "fpr = dict()\n",
         "tpr = dict()\n",
         "roc_auc = dict()\n",
@@ -2733,19 +2719,18 @@
       "source": [
         "def build_mobilenet_model(optimizer='adam', learning_rate=0.001, dropout_rate=0.5):\n",
         "    base_model = MobileNet(input_shape=(64, 64, 3), include_top=False, weights='imagenet')\n",
-        "    base_model.trainable = False  # Freeze the base model\n",
+        "    base_model.trainable = False\n",
         "\n",
-        "    # Custom top layers for CIFAR-10\n",
         "    model = models.Sequential([\n",
         "        base_model,\n",
         "        layers.GlobalAveragePooling2D(),\n",
         "        layers.Dropout(dropout_rate),\n",
         "        layers.Dense(128, activation='relu'),\n",
         "        layers.Dropout(dropout_rate),\n",
-        "        layers.Dense(10)  # Output layer for CIFAR-10 classes\n",
+        "        layers.Dense(10)\n",
         "    ])\n",
         "\n",
-        "    # Set optimizer with specified learning rate\n",
+        "    # Set optimizer\n",
         "    if optimizer == 'adam':\n",
         "        opt = optimizers.Adam(learning_rate=learning_rate)\n",
         "    elif optimizer == 'sgd':\n",
@@ -2767,9 +2752,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Reduced hyperparameter grid\n",
-        "opt_choices = ['adam']               # Only Adam optimizer for simplicity\n",
-        "learning_rates = [0.001]             # Single learning rate to reduce configurations\n",
+        "# Reduced hyperparameter\n",
+        "opt_choices = ['adam']\n",
+        "learning_rates = [0.001]\n",
         "dropout_rates = [0.5]                # Single dropout rate\n",
         "\n",
         "# Use a single validation split (e.g., 10% of training data)\n",
@@ -4555,7 +4540,7 @@
       "gpuType": "T4",
       "provenance": [],
       "mount_file_id": "1PdfJR9X5j5CUB4KNJdwfDjMqQkLEfc3T",
-      "authorship_tag": "ABX9TyPvRgluOPeHb4Bd8cMA/cOF",
+      "authorship_tag": "ABX9TyMfbgq/5e8D4ZswK8oqYYPG",
       "include_colab_link": true
     },
     "kernelspec": {
