--- a/DeepLearningAssignment2.ipynb
+++ b/DeepLearningAssignment2.ipynb
@@ -907,7 +907,7 @@
         "                          regularization=best_reg, use_residual=best_res)\n",
         "\n",
         "#final training with epochs and early stopping\n",
-        "history = final_model.fit(train_images, train_labels, epochs=5, batch_size=128,  # Reduced epochs, increased batch size\n",
+        "history = final_model.fit(train_images, train_labels, epochs=5, batch_size=128,\n",
         "                          validation_data=(val_images, val_labels), verbose=1,\n",
         "                          callbacks=[early_stopping])\n"
       ]
@@ -3163,15 +3163,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cZGwgERsihJk"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Splitting Data into Training and Validation Sets\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -3180,15 +3171,6 @@
       ],
       "metadata": {
         "id": "b3NSO4zx11tt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Vhvk8VdQihHc"
       },
       "execution_count": null,
       "outputs": []
@@ -3210,7 +3192,7 @@
         "                      kernel_regularizer=regularizers.l2(0.001))(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "\n",
-        "    # Use a layer to add input_data to x\n",
+        "\n",
         "    x = layers.Add()([x, input_data])\n",
         "    x = layers.ReLU()(x)\n",
         "    return x\n",
@@ -3221,13 +3203,13 @@
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.ReLU()(x)\n",
         "\n",
-        "    # Define the first stage\n",
+        "\n",
         "    x = layers.Conv2D(64, (3, 3), padding='same', strides=2, use_bias=False)(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
         "    x = layers.ReLU()(x)\n",
         "    x = resnet_block(x, 64, (3, 3))\n",
         "\n",
-        "    # Repeating similar blocks for other stages\n",
+        "\n",
         "    for filters in [128, 256, 512]:\n",
         "        x = layers.Conv2D(filters, (3, 3), padding='same', strides=2, use_bias=False)(x)\n",
         "        x = layers.BatchNormalization()(x)\n",
@@ -3548,15 +3530,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "6w8KfgcqihEa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3),\n",
         "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
@@ -3573,7 +3546,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#  train model\n",
+        "#train model\n",
         "history = model.fit(x_train, y_train, epochs=10, validation_data=(x_val, y_val), batch_size=64)\n",
         "\n"
       ],
@@ -3694,15 +3667,14 @@
       "source": [
         "from sklearn.metrics import classification_report\n",
         "\n",
-        "# Generate predictions on the test set\n",
         "y_pred = model.predict(x_test)\n",
-        "y_pred_classes = np.argmax(y_pred, axis=1)  # Convert predictions to class labels\n",
-        "y_true = y_test.flatten()  # Flatten y_test to match y_pred_classes format\n",
+        "y_pred_classes = np.argmax(y_pred, axis=1)\n",
+        "y_true = y_test.flatten()\n",
         "\n",
         "# Class names for CIFAR-10 dataset\n",
         "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
         "\n",
-        "# Generate and print the classification report\n",
+        "#print the classification report\n",
         "report = classification_report(y_true, y_pred_classes, target_names=class_names)\n",
         "print(\"Classification Report:\\n\", report)\n"
       ],
@@ -3749,10 +3721,8 @@
         "from sklearn.preprocessing import label_binarize\n",
         "from itertools import cycle\n",
         "\n",
-        "# Binarize the labels for ROC analysis\n",
-        "y_test_binarized = label_binarize(y_true, classes=np.arange(10))  # Adjust according to your class labels\n",
+        "y_test_binarized = label_binarize(y_true, classes=np.arange(10))\n",
         "\n",
-        "# Compute ROC curve and ROC area for each class\n",
         "fpr, tpr, roc_auc = {}, {}, {}\n",
         "for i in range(10):\n",
         "    fpr[i], tpr[i], _ = roc_curve(y_test_binarized[:, i], y_pred[:, i])\n",
@@ -3897,7 +3867,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define hyperparameter grid\n",
+        "# Define hyperparameter\n",
         "hyperparams = {\n",
         "    'optimizers': [tf.keras.optimizers.Adam, tf.keras.optimizers.SGD],\n",
         "    'learning_rates': [1e-3, 1e-4],\n",
@@ -3915,7 +3885,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define data augmentation functions\n",
+        "# Define data augmentation\n",
         "def get_datagen(aug_type):\n",
         "    if aug_type == 'standard':\n",
         "        return ImageDataGenerator(rotation_range=15, width_shift_range=0.1, height_shift_range=0.1, horizontal_flip=True)\n",
@@ -3933,7 +3903,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Function to build the model\n",
         "def build_model(dropout_rate, residual):\n",
         "    inputs = layers.Input(shape=(32, 32, 3))\n",
         "    x = layers.Conv2D(64, (3, 3), padding='same', use_bias=False)(inputs)\n",
@@ -3990,12 +3959,12 @@
         "kf = KFold(n_splits=2, shuffle=True, random_state=42)\n",
         "results = []\n",
         "\n",
-        "# Memory-optimized hyperparameter tuning loop\n",
-        "for optimizer_class in [tf.keras.optimizers.Adam]:  # Limit to one optimizer for this run\n",
-        "    for lr in [1e-3]:  # Limit to one learning rate for this run\n",
-        "        for dropout_rate in [0.3]:  # Limit to one dropout rate for this run\n",
-        "            for residual in [True, False]:  # Test only with/without residual links\n",
-        "                for aug_type in ['standard']:  # Use only one augmentation type\n",
+        "#hyperparameter tuning loop\n",
+        "for optimizer_class in [tf.keras.optimizers.Adam]:\n",
+        "    for lr in [1e-3]:\n",
+        "        for dropout_rate in [0.3]:\n",
+        "            for residual in [True, False]:\n",
+        "                for aug_type in ['standard']:\n",
         "\n",
         "                    fold_results = []\n",
         "                    for train_index, val_index in kf.split(x_train):\n",
@@ -4013,13 +3982,13 @@
         "                                      loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "                                      metrics=['accuracy'])\n",
         "\n",
-        "                        # Adjusted Callbacks with reduced patience\n",
+        "                        # Adjusted Callbacks\n",
         "                        lr_scheduler = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=1, verbose=1)\n",
         "                        early_stopping = EarlyStopping(monitor='val_loss', patience=2, restore_best_weights=True, verbose=1)\n",
         "\n",
-        "                        # Train for fewer epochs\n",
+        "\n",
         "                        history = model.fit(\n",
-        "                            datagen.flow(x_train_fold, y_train_fold, batch_size=32),  # Smaller batch size\n",
+        "                            datagen.flow(x_train_fold, y_train_fold, batch_size=32),\n",
         "                            epochs=5,  # Reduced epochs\n",
         "                            validation_data=(x_val_fold, y_val_fold),\n",
         "                            callbacks=[lr_scheduler, early_stopping]\n",
@@ -4037,7 +4006,7 @@
         "                        del model\n",
         "                        tf.keras.backend.clear_session()\n",
         "\n",
-        "                    # Average fold results for each hyperparameter setting\n",
+        "\n",
         "                    avg_train_acc = np.mean([r['train_accuracy'][-1] for r in fold_results])\n",
         "                    avg_val_acc = np.mean([r['val_accuracy'][-1] for r in fold_results])\n",
         "                    avg_train_loss = np.mean([r['train_loss'][-1] for r in fold_results])\n",
@@ -4212,7 +4181,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Find the best configuration based on validation accuracy\n",
+        "# Find the best configuration\n",
         "best_config = max(results, key=lambda x: x['avg_val_accuracy'])\n",
         "\n",
         "# Display the best configuration\n",
@@ -4251,7 +4220,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Data augmentation with the best configuration\n",
+        "# Data augmentation\n",
         "datagen = get_datagen(best_config['augmentation'])\n",
         "datagen.fit(x_train)\n",
         "\n",
@@ -4266,10 +4235,9 @@
         "lr_scheduler = ReduceLROnPlateau(monitor='loss', factor=0.5, patience=2, verbose=1)\n",
         "early_stopping = EarlyStopping(monitor='loss', patience=5, restore_best_weights=True, verbose=1)\n",
         "\n",
-        "# Train the model on the entire training set\n",
         "final_history = final_model.fit(\n",
         "    datagen.flow(x_train, y_train, batch_size=32),\n",
-        "    epochs=15,  # Adjust epochs as needed based on convergence observed in tuning\n",
+        "    epochs=15,\n",
         "    callbacks=[lr_scheduler, early_stopping]\n",
         ")\n"
       ],
@@ -4324,7 +4292,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Evaluate the final model on the test set\n",
+        "# Evaluate the final model\n",
         "test_loss, test_accuracy = final_model.evaluate(x_test, y_test)\n",
         "print(f\"Test Accuracy with best hyperparameters: {test_accuracy*100:.2f}%\")\n"
       ],
@@ -4400,10 +4368,8 @@
         "from sklearn.preprocessing import label_binarize\n",
         "from itertools import cycle\n",
         "\n",
-        "# Binarize the labels for multi-class ROC\n",
         "y_test_binarized = label_binarize(y_test, classes=np.arange(10))\n",
         "\n",
-        "# Compute ROC curve and ROC area for each class\n",
         "fpr, tpr, roc_auc = {}, {}, {}\n",
         "for i in range(10):\n",
         "    fpr[i], tpr[i], _ = roc_curve(y_test_binarized[:, i], y_pred[:, i])\n",
@@ -4448,26 +4414,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "GyJHh_O2lAzQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "\n",
-        "# Predict on the test set\n",
         "y_pred = final_model.predict(x_test)\n",
         "y_pred_classes = np.argmax(y_pred, axis=1)\n",
         "\n",
         "# Compute the confusion matrix\n",
         "conf_matrix = confusion_matrix(y_test.flatten(), y_pred_classes)\n",
         "\n",
-        "# Display the confusion matrix as a heatmap\n",
+        "# Display the confusion matrix\n",
         "disp = ConfusionMatrixDisplay(confusion_matrix=conf_matrix, display_labels=class_names)\n",
         "disp.plot(cmap=plt.cm.Blues, xticks_rotation=45, values_format='d')\n",
         "plt.title(\"Confusion Matrix for Final Model\")\n",
@@ -4540,7 +4496,7 @@
       "gpuType": "T4",
       "provenance": [],
       "mount_file_id": "1PdfJR9X5j5CUB4KNJdwfDjMqQkLEfc3T",
-      "authorship_tag": "ABX9TyMfbgq/5e8D4ZswK8oqYYPG",
+      "authorship_tag": "ABX9TyPAyw7yiN1A0AklnQcCo2Zd",
       "include_colab_link": true
     },
     "kernelspec": {
